[project]
name = "jmk"
version = "0.1.0"
description = "JMK Fashion"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "fastapi[standard]>=0.119.0",
    "pydantic>=2.12.0",
]

[dependency-groups]
dev = [
    "taskipy>=1.14.1",
]

[tool.ruff]
line-length = 120
exclude = [".git", "./.venv", "./node_modules"]

[tool.black]
line-length = 120
target-version = ['py311']

[tool.isort]
profile = "black"


[tool.taskipy.tasks]
server = { cwd = ".", cmd = "uv run fastapi dev server.py", help = "Run server" }
